# LynxBot

./: .gitignore  CHANGELOG  Makefile.in  README  configure  configure.ac
sample/: lynxbot_google.sh  lynxbot_quotetoscrape.sh
sample/ba/: ba.sh
src/: Makefile.am  Makefile.in  extractlastlinkfromlynx.c  extractlastlinkfromlynx_totest.c  get_hightlightyellow.c  get_linktype.c  init_lynxbot  lynxbot.sh  setstrforlynx.c  usleep.c
